--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=backend
-# Configuração do banco de dados MySQL
+spring.messages.basename=messages
+spring.config.import=classpath:application-secrets.properties
+# Configuracao do banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3304/leilao
 spring.datasource.username=root
 spring.datasource.password=
@@ -7,5 +9,5 @@ spring.datasource.password=
 # Driver do banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuração JPA (Hibernate)
+# Configuracao JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
