add | permicao na rota pessoa e perfil

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.config.import=classpath:application-secrets.properties
 # Configuracao do banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3304/leilao
 spring.datasource.username=root
-
+server.port=8080
 
 # Driver do banco de dados
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
